--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,8 +29,12 @@ android {
 }
 
 dependencies {
+    implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.2.0'
+    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.2.0'
+
     //noinspection GradleCompatible
-    implementation 'com.android.support:design:28.0.0'
+    def fragment_version = "1.3.2"
+    implementation "androidx.fragment:fragment:$fragment_version"
     implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation 'com.google.android.material:material:1.3.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
