--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,8 +8,9 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
+
         android:theme="@style/Theme.MainScreen">
-        <activity android:name=".M_01_02_02"></activity>
+        <activity android:name=".M_01_02_02" />
         <activity android:name=".M_01_03_06" />
         <activity android:name=".M_01_03_02" />
         <activity android:name=".M_01_02_01" />
