--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.MainScreen">
-        <activity android:name=".m_02_03_01"></activity>
+        <activity android:name=".M_03_01_02"></activity>
+        <activity android:name=".M_02_03_01" />
         <activity android:name=".M_02_02_01" />
         <activity android:name=".M_02_02_02" />
         <activity android:name=".M_01_02_05" />
